--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -278,7 +278,7 @@
 }
 
 @Article{PEARSON2017,
-  author  = {SONIA PEARSON},
+  author  = {Sonia Pearson},
   title   = {The Order to Cash (O2C) Process: Definition and Best-Practices},
   journal = {https://tallyfy.com/order-to-cash/},
   year    = {2017},
