--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -40,21 +40,21 @@
 % CONTEXT
 
 % NOOD
-Dit onderwerp werd voorgesteld door delaware. Om te onderzoeken hoe microservice integration patterns een invloed kunnen hebben op het order-to-cash proces binnen SAP. 
+'Microservice integration patterns op SAP order-to-cash proces' werd voorgesteld door delaware om te onderzoeken hoe microservice integration patterns een invloed kunnen hebben op het order-to-cash proces binnen SAP. 
 
 % TAAK
-Dit onderzoek kent een verdiepende structuur. Waar in de start uitleg wordt gegeven omtrent microservices, kent het vervolg een vergelijking tussen verschillende onderdelen. Enkele voorbeelden hiervan zijn authenticatie en authorisatie. Deze scriptie sluit af met opkomende ideologieën en de bescherming van microservices.
+Dit onderzoek kent een verdiepende structuur. Als eerst zal er uitleg worden gegeven omtrent microservices, dan komt er een vergelijking tussen de verschillende onderdelen. Enkele voorbeelden hiervan zijn authenticatie en authorisatie. Deze scriptie sluit af met opkomende ideologieën en de bescherming van microservices.
 
 % OBJECT
-In deze thesis is als eerste een uitgebreide literatuurstudie terug te vinden. In deze literatuurstudie wordt er dieper ingegaan op de technologie van microservice en de verschillende integration patterns omtrent de microservices. Daarnaast zal er meer uitleg gegeven worden over het order-to-cash proces.
-Na de literatuurstudie wordt het microservice integration pattern toegepast op het order-to-cash proces. Als afsluiter komt de conclusie.
+In deze thesis is als eerste een uitgebreide literatuurstudie terug te vinden. In deze studie wordt er dieper ingegaan op de technologie van microservices en de verschillende integration patterns daaromtrent. Daarnaast zal er meer uitleg gegeven worden over het order-to-cash proces.
+Na de literatuurstudie wordt een microservice integration pattern toegepast op het order-to-cash proces. Als afsluiter komt de conclusie omtrent deze studie.
 
 % RESULTAAT
-Microservices zorgen voor een geautomatiseerd proces met weinig interactie met een werknemer. Het is een complexe architectuur. De overschakeling bevat veel onderdelen waar er in eerste instantie niet aan gedacht wordt. Het werd ook duidelijk dat er goed moet worden nagedacht over alle kleine dingen, zoals authenticatie, de manier van bescherming, hoe logging wordt opgevangen. 
+Microservices zorgen voor een geautomatiseerd proces met weinig menselijke interactie, het is een complexe architectuur. De overschakeling naar een microservice architectuur bevat veel onderdelen waar er in eerste instantie niet aan gedacht wordt. Het werd ook duidelijk dat er goed moet worden nagedacht over alle kleine dingen, zoals authenticatie, de manier van bescherming, hoe logging wordt opgevangen...
+De manier op microservices te gaan gebruiken binnen een architectuur kan aan de hand van integration patterns. Er kan een microservice architectuur opgezet worden aan de hand van één integration pattern maar dat is niet aangeraden. Elke integration pattern heeft zijn tekortkomingen. Door meerdere te gaan combineren is de kans op falen kleiner, mits deze goed worden toegepast.
 
 % CONCLUSIE
-De overschakeling kan gemakkelijk onderschat worden.
-Een belangrijke vraag die men kan hebben is: hebben microservices wel een meerwaarde in dit proces? Of de overschakeling moet gemaakt worden, is afhankelijk van wat de noden de applicatie precies zijn.
+De overschakeling kan gemakkelijk onderschat worden waardoor zich een belangrijke vraag is: hebben microservices wel een meerwaarde in dit proces? Of de overschakeling moet gemaakt worden, is afhankelijk van wat de noden van de applicatie precies zijn.
 
 % PERSPECTIEF
-Er zullen zeker vragen en aanvullingen komen in de toekomst. Dit is een evoluerende technologie en er zullen betere oplossingen komen voor onderdelen.
+Er zullen zeker vragen en aanvullingen komen in de toekomst. Dit is een evoluerende technologie en er zullen betere oplossingen komen voor de verschillende onderdelen.
