--- a/bachproef/voorwoord.tex
+++ b/bachproef/voorwoord.tex
@@ -10,7 +10,7 @@
 %% eigen standpunt (``ik-vorm'') mag schrijven. Je kan hier bv. motiveren
 %% waarom jij het onderwerp wil bespreken.
 %% Vergeet ook niet te bedanken wie je geholpen/gesteund/... heeft
-Deze bachelorproef werd geschreven voor het behalen van het bachelordiploma Toegepaste Informatica. Eerst was het niet gemakkelijk om een onderwerp te vinden. Ik zou daarvoor graag mijn stagebedrijf, delaware, willen bedanken voor het voorstellen van een onderwerp. Dankzij hun kon ik mijn bachelorproef doen over een onderwerp dat mij echt interesseerde. Het was een aangename ervaring om drie jaar van de opleiding te kunnen omzetten in dit eindwerk. De ervaring van andere mensen heeft mij geholpen om door deze periode te geraken.
-Als eerste wil ik mijn co-promotor, Nicolas Pauwelyn, willen bedanken voor zijn hulp.
-Ik zou graag mijn ouders bedanken voor de steun die zij mij gaven. Voor hun geduld bij de stressvolle situaties. Ook wil ik mijn broer en zus bedanken voor hun hulp.
-Als laatste zou ik graag mijn mede-studenten bedanken voor alle hulp die ze mij gaven. 
+Deze bachelorproef werd geschreven om het behalen van het bachelordiploma Toegepaste Informatica. Eerst was het niet gemakkelijk om een onderwerp te vinden. Ik zou daarom graag mijn stagebedrijf, delaware, willen bedanken voor het voorstellen van het onderwerp: Microservice integration patterns op SAP order-to-cash proces. Dankzij hen kon ik mijn bachelorproef doen over een onderwerp dat mij echt interesseerde. Het was een aangename ervaring om drie jaar van de opleiding te kunnen omzetten in dit eindwerk. De ervaring van andere mensen heeft mij geholpen om door deze periode te geraken.
+Als eerste wil ik mijn co-promotor, Nicolas Pauwelyn, bedanken voor zijn hulp.
+Ik zou graag mijn ouders bedanken voor de steun en hun geduld tijdens de stressvolle situaties. Ook wil ik mijn broer en zus bedanken voor hun steun.
+Als laatste zou ik graag mijn medestudenten bedanken voor alle hulp die ze mij gaven. 
