--- a/bachproef/conclusie.tex
+++ b/bachproef/conclusie.tex
@@ -19,9 +19,6 @@ De conclusie van deze theoretische studie zal in dit deel duidelijk worden.
 Als eerste werd de vraag 'Wat zijn microservices?' gesteld. 
 Microservices zijn kleine delen die elk een requirement omvatten. Elke microservice functioneert apart en heeft weinig tot geen communicatie met de andere microservices. Om microservices te gaan ontwikkelen, moet er veel onderzocht worden. Wat te merken is aan de literatuurstudie. De literatuurstudie is niet heel diepgaand maar probeert wel zo veel mogelijk aspecten van microservices aan te halen. Microservice kan in meerdere contexten voor komen. Binnen elke context zal er meer verkaring nodig zijn. 
 
-De volgende vraag was 'Hoe kan er overgeschakeld worden naar een microservice architectuur?'.
-Er kan op verschillende manieren overgeschakeld worden naar microservices. Maar de meest aangeraden manier is: systematisch requirements vaststellen en omzetten naar een microservices. In een stappenplan werken, zodat er geen chaos ontstaat bij de overschakeling. Eerst de kern opbouwen en dan alle andere zaken erbij brengen. Eens de kern van de architectuur is getekend, kan men authenticatie, authorisatie, bescherming, logging en de API gateway er in steken. Er moet eerst goed worden nagedacht over hoe de implementatie van authenticatie, authorisatie, bescherming en logging zal gebeuren. Voor de overschakeling kan er gekeken worden naar de manier waarop men nu de authenticatie, authorisatie, bescherming en logging toepast en die manier dan verwerken bij de microservices.  
-
 Daarna kwam 'Welke aanpassingen kunnen of moeten er gebeuren aan de architectuur om microservices te laten werken? De veranderingen worden hieronder opgesomd:
 \begin{itemize}
 	\item Heeft deze applicatie nood aan een microservice architectuur?
@@ -35,6 +32,19 @@ Daarna kwam 'Welke aanpassingen kunnen of moeten er gebeuren aan de architectuur
 
 Een andere vraag die in het begin gesteld werd: Hoe zal de communicatie tussen de verschillende microservices werken?
 Voor de communicatie zijn er veel verschillende opties. Er moet gekeken worden naar welke manier het beste bij het bedrijf past. Is er een manier die al gekend is in het bedrijf? Heeft een andere manier enkele voordelen ten opzichte van de huidige techniek. In deze studie is er gekozen voor volgend communicatie methode: Via message queues. De data die microservice B nodig heeft, zal door microservice A naar microservice B zijn queue worden gestuurd. Bij deze manier heeft elke microservice een queue. Heeft microservice A data doorgekregen en haar taak ermee gedaan, dan plaatst ze een link naar de data op de queue van de microservice die de data nodig heeft. Dit zorgt ervoor dat als microservice B uitvalt, de nodige data niet verloren gaat. De queue slaat de gegevens op en verwijdert ze pas als ze zijn opgehaald. Als deze methode niet past binnen de verwachtingen van de architectuur dan kan men onderzoeken welke methode beter is. 
+
+Eens die vraag beantwoord werd, kon men de volgende vraag beantwoorden: Welke integration patterns zijn er?
+In deze paper zijn er vier integration patterns aan bod gekomen. Er zijn meerdere patterns maar het zou een overwelming zijn, mochtten alle mogelijke integration patterns aangehaald worden. De vier beschreven patterns zijn volgende:
+\begin{itemize}
+	\item Anti-patterns
+	\item Communication
+	\item Data integration
+	\item Extract, load and transform (ETL)
+\end{itemize}
+Bij anti-patterns beschrijven hoe men op een ongestructureerde manier microservices kan implementeren. Er zijn verschillende anti-patterns, hier werden er drie beschreven. Bij anti-patterns is de kans op falen heel groot. Er wordt niet gestructureerd nagedacht over de omschakeling.
+Na de anti-patterns werd de communicatie aangehaald. Er is maar één soort communicatie beschreven. Dit gebeurde omdat één methode al zware materie is om te begrijpen en te verwerken. De communicatie kan gebeuren via een publish/subscribe pattern.
+Eens de communicatie afgewerkt was, werd er geschreven over de data integration. Op welke manier kan de structuur van de data aangepast worden om de microservices architectuur te bevorderen. Hier zijn ook verschillende methodes voor maar ook hier werd er beperkt tot één: Elke microservice heeft zijn eigen databank. Dit zorgt voor complete onafhankelijkheid.
+Als laatste werd ETL aangehaald. ETL is een manier om data in te verzamelen van externe bronnen, in te laden in een andere databank waar er logica op los gelaten wordt. Eens dat gebeurt is, wordt de data getransformeerd en gebruikt om te gebruiken bij toekomstige beslissingen. De data heeft dan analytische doeleinden.
 
 Als volgt werd deze vraag gesteld: Hoe ziet een order-to-cash proces eruit? 
 Het order-to-cash proces is een proces dat voorkomt bij het plaatsen van een order tot het betalen van de factuur. In volgende opsomming zijn de stappen terug te vinden:
@@ -50,8 +60,12 @@ Het order-to-cash proces is een proces dat voorkomt bij het plaatsen van een ord
 De voorlaatste vraag, klinkt als volgt: Welke business requirements heeft een order-to-cash proces?
 De belangrijkste requirement is dat de klant zijn bestelling krijgt. Een andere requirement is de wanbetalers minimaal te houden door ze vroeg in het proces er uit te halen. De requirements liggen in lijn met de noden van de klant. De business requirements werden opgesteld door het order-to-cash proces grondig te bestuderen. In de literatuurstudie is meer uitleg te vinden over het OTC proces.
 
-Als laatste vraag werd 'Welke invloed heeft de microservice architectuur op de performance van een order-to-cash proces?' gesteld.
-Het verschil op performance vlak kan pas getest worden bij een studie met een proof of concept. Wat wel geconcludeerd kan worden, is volgende: De performance zal stabieler zijn bij pieken van orders. Omdat de microservices onafhankelijk zijn van elkaar. De onderdelen van het OTC proces kunnen onafhankelijker functioneren. Valt er een onderdeel uit of tijdelijk niet beschikbaar dan heeft dat geen grote gevolgen voor het proces in het algemeen. Het onderdeel ervoor kan nog altijd data op de queue plaatsen. Maar de onderdelen na het onbeschikbare deel, zal wel wat hinder ondervinden. Maar niet zodat het gehele proces plat zal liggen.
+'Welke invloed heeft een microservice integration pattern op het order-to-cash proces?' is de laatste vraag. Eén integration pattern zou een falende invloed hebben. Dit komt omdat één pattern maar een klein deeltje van de voordelen van microservices bedekt. Door meerdere en verschillende integration patterns toe te passen, kan er op een correcte en gestructureerde manier een microservice architectuur opgebouwd worden. Die drie gebruikte patterns zijn volgende:
+\begin{itemize}
+	\item Anti-pattern: 'Break the piggy bank'
+	\item Communicatie
+	\item Data integration
+\end{itemize}
 
 
 Microservice is een architectuur en ideologie waarin logica en de requirements, die te vinden zijn bij een monolithic, terugkomen. Dit heeft invloed op de overschakeling naar microservices. Deze manier van implementatie moet aangepast worden bij het gebruik van microservices. Dat kan een obstakel zijn. Er wordt een andere manier van denken en organiseren gevraagd binnen een de IT-afdeling. De teams worden hervormd. Een team bevat niet meer de kennis van de volledige architectuur., enkel over de microservice waaraan zij werken. 
