--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -7,18 +7,17 @@
 
 \section{\IfLanguageName{dutch}{Probleemstelling}{Problem Statement}}
 \label{sec:probleemstelling}
-De promotor en doelgroep van dit onderzoek is delaware.
+De promotor en doelgroep van dit onderzoek is delaware. Zij stelden voor om te onderzoeken hoe microservices integration patterns het order-to-cash proces beïnvloeden. Microservices is een opkomende technologie die heeft invloed op de architectuur van een applicatie. Omtrent deze technologie zijn er verschillende manieren, integration patterns, om te implementeren. Het nut van deze bachelorproef is om integration patterns op een order-to-cash proces toe te passen, op een theoretisch vlak. Op die manier kan er een beeld geschetst worden om bij een bestaande architectuur deze nieuwe technologie te gebruiken.
 
 \section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}
 \label{sec:onderzoeksvraag}
-De algemene onderzoeksvraag is: "Hoe microserivce integration patterns een order-to-cash proces in SAP kan beïnvloeden?". De algemene vraag delen we op in volgende punten:
+De onderzoeksvraag is: "Hoe microservice integration patterns een order-to-cash proces in SAP kan beïnvloeden?". Of de beïnvloeding positief of negatief is, zal later duidelijk worden. De algemene vraag delen we op in volgende punten:
 \begin{itemize}
   \item Wat zijn microservices?
-  \item Hoe kan er overgeschakeld worden naar een microservice architectuur?
   \item Welke aanpassingen kunnen of moeten er gebeuren aan de architectuur om de microservices te laten werken?
   \item Hoe zal de communicatie tussen de verschillende microservices werken?
   \item Welke integration patterns zijn er?
-  \item Hoe zit een order-to-cash (OTC) proces er uit?
+  \item Hoe ziet een order-to-cash (OTC) proces er uit?
   \item Welke business requirements heeft een order-to-cash proces?
   \item Welke invloed heeft een microservice integration pattern op het order-to-cash proces?
 \end{itemize}
@@ -26,7 +25,7 @@ Dit zal een theoretische studie zijn.
 
 \section{\IfLanguageName{dutch}{Onderzoeksdoelstelling}{Research objective}}
 \label{sec:onderzoeksdoelstelling}
-Het doel van deze paper is het onderzoeken van de effecten van een microservices integration patterns op de architectuur van een OTC-proces in SAP. De ambitie houdt in dat er verschillende microservice integration patterns worden onderzocht. Bij de methodologie wordt er één integration pattern theoretisch benadert op het order-to-cash proces. Het integration pattern zal gekozen worden aan de hand van een vergelijking met verschillende patterns.
+Het doel van deze paper is het onderzoeken van de effecten van een microservices integration patterns op de architectuur van een OTC-proces in SAP. De ambitie houdt in dat er verschillende microservice integration patterns worden onderzocht. Bij de methodologie wordt er één integration pattern theoretisch benaderd op het order-to-cash proces. Het integration pattern zal gekozen worden aan de hand van een vergelijking met verschillende patterns.
 
 \section{\IfLanguageName{dutch}{Opzet van deze bachelorproef}{Structure of this bachelor thesis}}
 \label{sec:opzet-bachelorproef}
@@ -39,8 +38,8 @@ De rest van deze bachelorproef is als volgt opgebouwd:
 
 In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand van zaken binnen het onderzoeksdomein, op basis van een literatuurstudie. Hierin zal er meer uitleg gegeven worden over microservices, verschillende integration patterns en het order-to-cash proces binnen SAP.
 
-In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvragen. Hier zal het onderzoek worden uitgevoerd over hoe microservices het order-to-cash proces zullen beïnvloeden.
+In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht.  Hier zal het onderzoek worden uitgevoerd over hoe microservices integration patterns het order-to-cash proces beïnvloeden. 
 
 % TODO: Vul hier aan voor je eigen hoofstukken, één of twee zinnen per hoofdstuk
 
-In Hoofdstuk~\ref{ch:conclusie}, tenslotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
+In Hoofdstuk~\ref{ch:conclusie}, ten slotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
